# zed

./: Cargo.toml
assets/keymaps/: default-macos.json
crates/claude_code/: Cargo.toml
crates/claude_code/src/: claude_code.rs  claude_code_panel.rs
crates/editor/src/: actions.rs  completions.rs  editor.rs  element.rs
crates/git_ui/src/: git_graph.rs  git_graph_panel.rs  git_ui.rs
crates/workspace/src/: pane.rs  workspace.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  visual_test_runner.rs  zed.rs
script/: build-custom
