[package]
name = "claude_code"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/claude_code.rs"
doctest = false

[features]
default = []

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
futures.workspace = true
gpui.workspace = true
menu.workspace = true
project.workspace = true
serde.workspace = true
serde_json.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
